--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.1",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@reduxjs/toolkit": "^1.7.1",
+    "framer-motion": "^5",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
