--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@reduxjs/toolkit": "^1.7.1",
+    "@types/apollo-upload-client": "^17.0.0",
+    "apollo-upload-client": "^17.0.0",
     "framer-motion": "^5",
     "graphql": "^16.3.0",
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "subscriptions-transport-ws": "^0.11.0"
   },
   "devDependencies": {
     "@types/node": "17.0.13",
