--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@emotion/styled": "^11",
     "@reduxjs/toolkit": "^1.7.1",
     "@types/apollo-upload-client": "^17.0.0",
+    "@types/cookie": "^0.4.1",
     "apollo-upload-client": "^17.0.0",
+    "cookie": "^0.4.1",
     "framer-motion": "^5",
     "graphql": "^16.3.0",
+    "js-cookie": "^3.0.1",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
